fair vis - fixing some alignment issues

--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -1,5 +1,14 @@
 .row {
-  padding: 5px 30px;
+  padding: 0;
+}
+
+.col {
+  margin-bottom: 0;
+}
+
+.body {
+  padding-bottom: 0 !important;
+  padding-left: 25px !important;
 }
 
 .container {
@@ -7,6 +16,7 @@
   align-items: baseline;
   flex-wrap: wrap;
   column-gap: 20px;
+  // padding: 0 10px;
 
   .title {
     margin: 0
